--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
+    " Exiger " : {
+     " Laravel / framework " : " 5.1 *. " ,
+     " Mayconbordin / l5-moustache " : " dev-master " 
+    },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
